create user_authentication and cart model

--- a/clothing_store/store/templates/store/main_page.html
+++ b/clothing_store/store/templates/store/main_page.html
@@ -18,7 +18,7 @@
 
 <div class="featured-products">
     <div class="container">
-        <h2>Featured Products</h2>
+        <h2>Latest Product</h2>
         <div class="products-grid">
             {% for product in products %}
             {% with product.images.first as main_image %}
