--- a/clothing_store/templates/index.html
+++ b/clothing_store/templates/index.html
@@ -20,9 +20,13 @@
                     <li><a href="/about/">About Us</a></li>
                     <li><a href="/contact/">Contact</a></li>
                     {% if user.is_authenticated %}
-                        <li><a href="/contact/">Profile</a></li>
+                        <li><a href="{% url "login-page" %}">Profile</a></li>
+                        <form action="{% url "logout" %}" method="POST">
+                            {% csrf_token %}
+                            <button type="submit">Logout</button>
+                        </form>
                     {% else %}
-                        <li><a href="/contact/">Login in</a></li>
+                        <li><a href="{% url "login-page" %}">Login in</a></li>
                     {% endif %}
                     <li><a href="/contact/">Cart</a></li>
                 </ul>
