--- a/clothing_store/templates/index.html
+++ b/clothing_store/templates/index.html
@@ -28,7 +28,7 @@
                     {% else %}
                         <li><a href="{% url "login-page" %}">Login in</a></li>
                     {% endif %}
-                    <li><a href="/contact/">Cart</a></li>
+                    <li><a href="{% url "cart-page" %}">Cart</a></li>
                 </ul>
             </nav>
         </div>
