--- a/clothing_store/app_auth/templates/app_auth/login.html
+++ b/clothing_store/app_auth/templates/app_auth/login.html
@@ -4,7 +4,7 @@
 {% block title %}Login{% endblock title %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'app_auth/login_page.css' %}">
+<link rel="stylesheet" href="{% static 'app_auth/login.css' %}">
 {% endblock css %}
 
 {% block content %}
