--- a/clothing_store/app_auth/templates/app_auth/register.html
+++ b/clothing_store/app_auth/templates/app_auth/register.html
@@ -4,7 +4,7 @@
 {% block title %}Register{% endblock title %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'app_auth/register_page.css' %}">
+<link rel="stylesheet" href="{% static 'app_auth/register.css' %}">
 {% endblock css %}
 
 {% block content %}
