--- a/clothing_store/static/style.css
+++ b/clothing_store/static/style.css
@@ -1,4 +1,9 @@
 /* Global Styles */
+/* Убедитесь, что страница занимает всю высоту экрана */
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -6,7 +11,11 @@ body {
     box-sizing: border-box;
     background-color: #f8f8f8;
     color: #333;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
 }
+
 
 header {
     background-color: #333;
