--- a/clothing_store/templates/index.html
+++ b/clothing_store/templates/index.html
@@ -20,11 +20,7 @@
                     <li><a href="/about/">About Us</a></li>
                     <li><a href="/contact/">Contact</a></li>
                     {% if user.is_authenticated %}
-                        <li><a href="{% url "login-page" %}">Profile</a></li>
-                        <form action="{% url "logout" %}" method="POST">
-                            {% csrf_token %}
-                            <button type="submit">Logout</button>
-                        </form>
+                        <li><a href="{% url "profile" %}">Profile</a></li>
                     {% else %}
                         <li><a href="{% url "login-page" %}">Login in</a></li>
                     {% endif %}
@@ -36,6 +32,7 @@
 
     {% block content %}{% endblock content %}
 
+    
     <footer>
         <div class="footer-content">
             <p>&copy; 2024 ClothingStore. All Rights Reserved.</p>
