--- a/clothing_store/app_auth/templates/app_auth/account_edit.html
+++ b/clothing_store/app_auth/templates/app_auth/account_edit.html
@@ -36,7 +36,7 @@
                 {{ form.last_name.label_tag }}
                 {{ form.last_name }}
             </div>
-            <button type="submit" class="login-btn">Edit</button>
+            <button type="submit" class="login-btn">Save</button>
         </form>
     </div>
 </div>
