--- a/clothing_store/app_auth/templates/app_auth/includes/sidebar.html
+++ b/clothing_store/app_auth/templates/app_auth/includes/sidebar.html
@@ -2,7 +2,7 @@
 <aside class="sidebar">
     <h2>My Profile</h2>
     <ul>
-        <li><a href="">My Orders</a></li>
+        <li><a href="{% url "profile" %}">My Orders</a></li>
         <li><a href="">My Returns</a></li>
         <li><a href="{% url "account-edit" %}">Account Details</a></li>
         <li><a href="">Shipping Addresses</a></li>
