--- a/clothing_store/store/static/store/css/product_page.css
+++ b/clothing_store/store/static/store/css/product_page.css
@@ -179,3 +179,15 @@ footer {
     text-align: center;
     margin-bottom: 1rem;
 }
+.product-rating {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+    margin-bottom: 0.5rem;
+}
+
+.product-rating .star {
+    color: #ffcc00; /* Цвет для звезд (желтый) */
+    font-size: 1.5rem;
+}
+
