--- a/clothing_store/store/templates/store/shop_page.html
+++ b/clothing_store/store/templates/store/shop_page.html
@@ -41,7 +41,7 @@
                         </div>
                         {% endwith %}
                     {% empty %}
-                        <p>No products available in this category.</p>
+                        <p>No products available</p>
                     {% endfor %}
                 </div>
             </section>
