--- a/clothing_store/store/templates/store/product_page.html
+++ b/clothing_store/store/templates/store/product_page.html
@@ -52,7 +52,11 @@
                     </div>
                         <input type="hidden" name = "product_id" value="{{ product.id }}">
                         {% if product.sizes.all|length != 0 %}
-                    <button type="submit" class="btn add-to-cart">Add to Cart</button>
+                            {% if user.is_authenticated %}
+                                <button type="submit" class="btn add-to-cart">Add to Cart</button>
+                                {% else %}
+                                <a href="{% url "login-page" %}" ><button type="button" class="btn add-to-cart">Add to Cart</button></a>
+                                {% endif %}
                     {% endif %}
                 </form>
             </div>
